--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -22,4 +22,4 @@ jobs:
           port: ${{ secrets.PORT }}
           key: ${{ secrets.SSHKEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
-          script: "cd /home/u386930234/domains/salla.proofast.com/public_html &&  ./.scripts/deploy_dev.sh"
+          script: whoami ## "cd /home/u386930234/domains/salla.proofast.com/public_html &&  ./.scripts/deploy_dev.sh"
