--- a/.env.dev
+++ b/.env.dev
@@ -7,11 +7,11 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=sqlite
-# DB_HOST=http://localhost:8081
-# DB_PORT=3306
-# DB_DATABASE=faster
-# DB_USERNAME=root
-# DB_PASSWORD=secret
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=u386930234_dev
+DB_USERNAME=u386930234_dev_user
+DB_PASSWORD=dev_User1
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
