--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "watch-poll": "mix watch -- --watch-options-poll=1000"
   },
   "dependencies": {
+    "puppeteer": "^22.7.1",
     "vuetify": "^2.6.0"
   },
   "devDependencies": {
